<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ENUM_DPX" Id="{a510b5ee-43f5-4fc3-b329-346b8865c3e5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
// EPICS states enum for use in FB_DPX (diagnostic paddle X)
// Remove strict attribute for easier handling
TYPE ENUM_DPX :
(
    UNKNOWN := 0, // UNKNOWN must be in slot 0 or the FB breaks
    PARK := 1,    // The parked position for the diagnostic paddle
    CENTER := 2,  // center positon for the diagnostic paddle. This should be
    KNIFE	:= 3  // Knife edge position for the diagnostic paddle. Should be the same nominal X positon as the "CENTER"
                  // position, but will use a different set of soft limits to allow scanning of the knife edge.
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>